App/.k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-nodejs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /hello-nodejs
          # path: /hello-n=odejs(.*) /hello-nodejs/(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: hello-nodejs
              port:
                number: 6000
